<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Tbar1"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        xmlns:android="http://schemas.android.com/apk/res/android" />



    <ScrollView
        android:id="@+id/ScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tbar1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/dot7_register3" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Input_Layout_Mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Tbar1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                tools:layout_editor_absoluteY="216dp">

                <EditText
                    android:id="@+id/Mob_No"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Mobile_Hint"
                    android:inputType="number"
                    android:drawableStart="@mipmap/ic_phone_black_24dp"
                    android:maxLength="10"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Input_Layout_FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Layout_Mobile"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/Full_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Full_Name_Hint"
                    android:drawableStart="@mipmap/ic_account_circle_black_24dp"
                    android:inputType="textCapWords"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Input_Layout_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/Email_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email_Id_Hint"
                    android:drawableStart="@mipmap/ic_email_black_24dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Input_Layout_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password_Hint"
                    android:drawableStart="@mipmap/ic_lock_outline_black_24dp"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Input_Layout_Confirm_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/Cnfpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Confirm_Password_Hint"
                    android:drawableStart="@mipmap/ic_lock_outline_black_24dp"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/Btn_Signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:text="@string/Signup_Button"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/TextViewOR"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Or" />

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Google_Sign_Up"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                app:isDarkTheme="false" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/Link_Login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="callLogin"
                android:text="@string/Login_Link"
                android:textColor="@color/colorAccent" />


        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>