<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Tbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <ImageView
        android:id="@+id/LoginPageUserAddPng"
        android:layout_width="216dp"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tbar1"
        app:srcCompat="@drawable/loginpage" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Input_Layout_Name_Mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPageUserAddPng">

        <EditText
            android:id="@+id/Mob_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_phone_black_24dp"
            android:hint="@string/Mobile_Hint"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/Input_Layout_Name_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Layout_Name_Mobile">

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_lock_outline_black_24dp"
            android:hint="@string/Password_Hint"

            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/Input_Layout_Name_Forgot_Password"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="forgotPassword"
        android:padding="15dp"
        android:text="@string/Forgot_Password"
        android:textColor="@color/tealButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Layout_Name_Password" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/Sign_In_Button"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Layout_Name_Login_Button"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/Link_Signup"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:onClick="Call_Signup"
        android:text="@string/Signup_Link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_In_Button"
        app:layout_constraintVertical_bias="0.0"

        />

    <!--<LinearLayout
        android:id="@+id/Input_Layout_Name_Login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/Sign_In_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Layout_Name_Forgot_Password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Login_Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#FFF" />

        <ProgressBar
            android:id="@+id/Login_Progress_Bar"
            android:layout_width="32dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>-->

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btn_id"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/progress_shape"
        android:text="@string/Login_Button"
        app:layout_constraintBottom_toTopOf="@+id/Link_Signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Layout_Name_Password"
        app:spinning_bar_color="@color/tealButton"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

</android.support.constraint.ConstraintLayout>